--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - v4
-  content_update:
-    types: [custom-event]
+  repository_dispatch:
+    types: [content-update]
  
 permissions:
   contents: read
