disable repo dispatch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Deploy Quartz site to GitHub Pages
  
 on:
-  repository_dispatch:
-    types: [content-update]
+  # repository_dispatch:
+  #   types: [content-update]
   push:
     branches:
       - v4
